# GenConvo

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
infra/: modal_deploy_tokasaurus.py  modal_deploy_vllm.py
notebooks/: test_finance_bench.ipynb  test_synthesizer.ipynb
src/genconvo/: cli.py  config.py  pipeline.py  synthesizer.py
src/genconvo/clients/: base.py  tokasaurus.py  usage.py
src/genconvo/contexts/: financebench.py
src/genconvo/data/finance/: __init__.py  dataset.py  load.py
src/genconvo/prompts/: answers.py  cot.py  prompts.py  questions.py
src/genconvo/units/: answer.py  base.py  question.py
src/genconvo/utils/: __init__.py  cached_prompt.py  dataset_manager.py  markdown.py  parser.py  schemas.py
