[project]
name = "genconvo"
version = "1.0.0"
description = "Replication of GenConvoBench from https://arxiv.org/pdf/2506.06266"
authors = [{ name = "Mauri Diaz", email = "mau@mit.edu" }]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.27",
    "tqdm>=4.67.1",
    "verdict",
]

[project.scripts]
genconvo = "genconvo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true
stubPath = "typings"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
